Add roasters handlers swagger definition
